<resources>
    <string name="app_name">Appsistant</string>
    <!-- Login Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appTitle">Appsistant</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="loginButton_text">Log in</string>
    <string name="signup_text"><u>New to Appsistant? Sign up</u></string>
    <string name="forgot_text"><u>Forgot username/password</u></string>
    <string name="inputRecover_text">Enter your email</string>
    <string name="recoverButton_text">Recover my credentials</string>

    <!-- Global Strings -->
    <string name="settings">Settings</string> <!-- used for title and button -->

    <!-- Main Strings -->
    <string name="applications_title">Applications List</string>
    <string name="calendar_button">Calendar</string>
    <string name="camera_button">Camera</string>
    <string name="clock_button">Clock</string>
    <string name="contacts_button">Contacts</string>
    <string name="messages_button">Messages</string>
    <string name="gallery_button">Gallery</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="choose_colour">Choose Colour:</string>
    <string name="icon_toggle">Icon Toggle</string>
    <string name="apply">Apply</string>
    <string name="button">Button</string>
    <string name="search_product_string">Search Application</string>
    <string name="search_click_button">Search click button</string>
    <string name="clear_button">Clear Button</string>
    <string name="increase_font_size">Increase Font Size</string>
    <string name="decrease_font_size">Decrease Font Size</string>
    <string name="back_arrow_button_image">Back Arrow Button</string>
    <string name="camera_options">Camera Options</string>

    <string-array name="colour_options">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>

</resources>