<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangedActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applications_title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/scrollView"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="364dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button

                    android:id="@+id/calendarBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0303"
                    android:text="@string/calendar_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/cameraBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/camera_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_clock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/clock_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_contacts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/contacts_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/message_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/messages_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/gallery_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/gallery_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/tutorial_button"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/settings_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:onClick="settingsClicked"
                    android:text="@string/settings"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>