<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applications_title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:padding="20dp"

        app:layout_constraintBottom_toTopOf="@id/search_bar"

        app:layout_constraintStart_toStartOf="parent" />



    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/spacing_middle"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_search" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="Search product"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:singleLine="true">

                <requestFocus />

            </EditText>

            <ImageButton
                android:id="@+id/bt_clear"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="364dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button

                    android:id="@+id/calendarBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_today"
                    android:text="@string/calendar_button" />

                <Button
                    android:id="@+id/cameraBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_camera"
                    android:text="@string/camera_button" />

                <Button
                    android:id="@+id/button_clock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_recent_history"
                    android:text="@string/clock_button" />

            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_contacts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_my_calendar"
                    android:text="@string/contacts_button" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/message_btn"
                    android:drawableTop="@android:drawable/stat_notify_chat"
                    android:text="@string/messages_button" />

                <Button
                    android:id="@+id/gallery_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@android:drawable/ic_menu_gallery"
                    android:text="@string/gallery_button" />

            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/tutorial_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </TableRow>
        </TableLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>